tests/paczka1/small_fuzzy/52987844.err
Error in line 9: GLE18pe72 S565 04,1
Error in line 10: GLE18pe72 S565 1,1
Error in line 11: GLE18pe72 S268 57,0
Error in line 7: A194 S268 10,3
